--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;lang=en" />
+  <link href="https://fonts.googleapis.com/css?family=Inter:400,700&display=swap" rel="stylesheet">
 
   
   <title>Frontend Mentor | Social media dashboard with theme switcher</title>
@@ -20,94 +21,96 @@
 </head>
 <body>
 
+<header>
   <h1>Social Media Dashboard</h1>
   <p class="total">Total Followers: 23,004
-  <input type="checkbox" id="switch" onclick="toggleMode()" /><label for="switch"></label>
-  <span> White Mode </span>
+  <input type="checkbox" 
+         id="switch" 
+         onclick="toggleMode()"/>
+  <label for="switch"></label>
+  <span class="dark">Dark Mode</span>
 </p>
+</header>
 
-  
-<div style="border-top-style: groove; border-color: hsl(195, 100%, 50%);">
+<!-- Section 1  -->
+
+<section>
+<div class="facebook">
   <i class="fa fa-facebook-square" style="color: hsl(195, 100%, 50%); font-size:20px;"></i> @nathanf
   <h1>1987</h1>
   <p class="followers">Followers</p>
-  <p class="day-green" style="color: hsl(163, 72%, 41%);"><i class="fa fa-sort-up"></i> 12 Today</p>
+  <p class="day-green"><i class="fa fa-sort-up"></i> 12 Today</p>
 </div>
 
-<div style="border-top-style: groove; border-color: hsl(203, 89%, 53%);">
+<div class="twitter">
   <i class="fa fa-twitter" style="color: hsl(203, 89%, 53%); font-size:20px;"></i> @nathanf
   <h1>1044</h1>
   <p class="followers">Followers</p>
-  <p class="day-green" style="color: hsl(163, 72%, 41%);"><i class="fa fa-sort-up"></i> 99 Today</p>
+  <p class="day-green"><i class="fa fa-sort-up"></i> 99 Today</p>
 </div>
 
-<div style="border-top-style: groove; border-color:  hsl(329, 70%, 58%);">
+<div class="instagram">
   <i class="fa fa-instagram" style="color: hsl(329, 70%, 58%); font-size:20px;"></i> @realnathanf
   <h1>11k</h1>
   <p class="followers">Followers</p>
-  <p class="day-green" style="color: hsl(163, 72%, 41%);"><i class="fa fa-sort-up"></i> 1099 Today</p>
+  <p class="day-green"><i class="fa fa-sort-up"></i> 1099 Today</p>
 </div>
 
-<div style="border-top-style: groove; border-color: hsl(348, 97%, 39%);">
+<div class="youtube">
   <i class="fa fa-youtube-play" style="color: red; font-size:20px;"></i> Nathan F.
   <h1>8239</h1>
   <p class="followers">Subscribers</p>
-  <p class="day-red" style="color: hsl(356, 69%, 56%);"><i class="fa fa-sort-down"></i> 144 Today</p>
+  <p class="day-red"><i class="fa fa-sort-down"></i> 144 Today</p>
 </div>
+</section>
 
-<br/>
+<!-- Section 2  -->
 
+<section>
   <h1>Overview - Today</h1>
 
 <div class="div2"> 
-  Page Views <i class="fa fa-facebook-square" style="color: hsl(195, 100%, 50%); font-size:20px;"></i>
-  <h2>87</h2>
-  <p class="day-green" style="color: hsl(163, 72%, 41%);"><i class="fa fa-sort-up"></i> 3%</p>
+  <p class="card2">Page Views <i class="fa fa-facebook-square" style="color: hsl(195, 100%, 50%); font-size:20px;"></i></p>
+  <p class="number-card2"><span>87</span> <span class="day-green"><i class="fa fa-sort-up"></i> 3%</span></p>
 </div>
 
 <div class="div2">
-  Likes <i class="fa fa-facebook-square" style="color: hsl(195, 100%, 50%); font-size:20px;"></i>
-  <h2>52</h2>
-  <p class="day-red" style="color: hsl(356, 69%, 56%);"><i class="fa fa-sort-down"></i> 2%</p>
+  <p class="card2">Likes <i class="fa fa-facebook-square" style="color: hsl(195, 100%, 50%); font-size:20px;"></i></p>
+  <p class="number-card2"><span>52</span> <span class="day-red"><i class="fa fa-sort-down"></i> 2%</span></p>
 </div>
 
 <div class="div2">
-  Likes <i class="fa fa-instagram" style="color: hsl(329, 70%, 58%); font-size:20px;"></i>
-  <h2>5462</h2>
-  <p class="day-green" style="color: hsl(163, 72%, 41%);"><i class="fa fa-sort-up"></i> 2257%</p>
+  <p class="card2">Likes <i class="fa fa-instagram" style="color: hsl(329, 70%, 58%); font-size:20px;"></i></p>
+  <p class="number-card2"><span>5462</span> <span class="day-green"><i class="fa fa-sort-up"></i> 2257%</span></p>
 </div>
 
 <div class="div2">
-  Profile Views <i class="fa fa-instagram" style="color: hsl(329, 70%, 58%); font-size:20px;"></i>
-  <h2>52k</h2>
-  <p class="day-green" style="color: hsl(163, 72%, 41%);"><i class="fa fa-sort-up"></i> 1375%</p>
+  <p class="card2">Profile Views <i class="fa fa-instagram" style="color: hsl(329, 70%, 58%); font-size:20px;"></i></p>
+  <p class="number-card2"><span>52k</span> <span class="day-green"><i class="fa fa-sort-up"></i> 1375%</span></p>
 </div>
 
 <br/>
 
 <div class="div2">
-  Retweets <i class="fa fa-twitter" style="color: hsl(203, 89%, 53%); font-size:20px;"></i>
-  <h2>117</h2>
-  <p class="day-green" style="color: hsl(163, 72%, 41%);"><i class="fa fa-sort-up"></i >303%</p>
+  <p class="card2">Retweets <i class="fa fa-twitter" style="color: hsl(203, 89%, 53%); font-size:20px;"></i></p>
+  <p class="number-card2"><span>117</span> <span class="day-green"><i class="fa fa-sort-up"></i >303%</span></p>
 </div>
 
 <div class="div2">
-  Likes <i class="fa fa-twitter" style="color: hsl(203, 89%, 53%); font-size:20px;"></i>
-  <h2>507</h2>
-  <p class="day-green" style="color: hsl(163, 72%, 41%);"><i class="fa fa-sort-up"></i> 553%</p>
+  <p class="card2">Likes <i class="fa fa-twitter" style="color: hsl(203, 89%, 53%); font-size:20px;"></i></p>
+  <p class="number-card2"><span>507</span> <span class="day-green"><i class="fa fa-sort-up"></i >553%</span></p>
 </div>
 
 <div class="div2">
-  Likes <i class="fa fa-youtube-play" style="color: red; font-size:20px;"></i>
-  <h2>107</h2>
-  <p class="day-red" style="color: hsl(356, 69%, 56%);"><i class="fa fa-sort-down"></i> 19%</p>
+  <p class="card2">Likes <i class="fa fa-youtube-play" style="color: red; font-size:20px;"></i></p>
+  <p class="number-card2"><span>107</span> <span class="day-red"><i class="fa fa-sort-down"></i> 19%</span></p>
 </div>
 
 <div class="div2">
-  Total Views <i class="fa fa-youtube-play" style="color: red; font-size:20px;"></i>
-  <h2>1407</h2>
-  <p class="day-red" style="color: hsl(356, 69%, 56%);"><i class="fa fa-sort-down"></i> 12%</p>
-</div>  
+  <p class="card2">Total Views <i class="fa fa-youtube-play" style="color: red; font-size:20px;"></i></p>
+  <p class="number-card2"><span>1407</span> <span class="day-red"><i class="fa fa-sort-down"></i> 12%</span></p>
+</div>
+</section>
 
 
   <footer class="attribution">
@@ -120,7 +123,7 @@
   <script>
     function toggleMode() {
       var element = document.body;
-      element.classList.toggle("white-mode")
+      element.classList.toggle("dark-mode")
     }
   </script>
   
